# avalanche

./: Avalanche.md  Distributed_avalanche.md  Input_masks_and_function_filtering.md  Installation.md  Makefile.am  Mask_syntax.md  Multiple_threads_for_STP_queries.md  Papers.md  ProjectHome.md  README  README.arm  Samples.md  Separate_analysis_speed_up.md  Specifying_functions_for_separate_analysis.md  User_Guide.md  Using_Avalanche.md  Using_CLO_checking.md  configure.ac
agent/: Makefile.am  agent.cpp  dist.cpp  plugin-agent.cpp  util.cpp
branches/development/: README.android  autogen.sh  configure.ac
branches/development/agent/: Makefile.am  agent.cpp  dist.cpp  plugin-agent.cpp
branches/development/driver/include/: Chunk.h  Error.h  ExecutionManager.h  FileBuffer.h  Input.h  LocalExecutor.h  Makefile.am  Monitor.h  OptionConfig.h  OptionParser.h  PluginExecutor.h  STP_Executor.h  SocketBuffer.h  Thread.h  TmpFile.h
branches/development/driver/src/: Chunk.cpp  Entry.cpp  Error.cpp  ExecutionManager.cpp  FileBuffer.cpp  LocalExecutor.cpp  Logger.cpp  Makefile.am  Monitor.cpp  OptionParser.cpp  PluginExecutor.cpp  RemotePluginExecutor.cpp  STP_Executor.cpp  STP_Output.cpp  SocketBuffer.cpp  Thread.cpp  TmpFile.cpp
branches/development/samples/simple/: Makefile.am
branches/development/stp-ver-0.1-11-18-2008/: configure.ac
branches/development/stp-ver-0.1-11-18-2008/parser/: Makefile.am
branches/development/valgrind/: Makefile.all.am  Makefile.am
branches/development/valgrind/coregrind/: m_clientstate.c
branches/development/valgrind/covgrind/: cv_main.c
branches/development/valgrind/docs/: Makefile.am
branches/development/valgrind/helgrind/: Makefile.am  hg_main.c
branches/development/valgrind/include/: avalanche.h
branches/development/valgrind/tracegrind/: Makefile.am  parser.c  parser.h  tg_dhelpers_arm.c  tg_main.c  tg_replace_strmem.c
branches/distributed-avalanche/: Makefile.am  configure.ac
branches/distributed-avalanche/agent/: agent.cpp  dist.cpp
branches/distributed-avalanche/driver/include/: Chunk.h  ExecutionManager.h  Executor.h  FileBuffer.h  Input.h  Makefile.am  Monitor.h  OptionConfig.h  SocketBuffer.h  Thread.h
branches/distributed-avalanche/driver/src/: Chunk.cpp  Entry.cpp  ExecutionManager.cpp  Executor.cpp  FileBuffer.cpp  Input.cpp  Makefile.am  Monitor.cpp  OptionParser.cpp  PluginExecutor.cpp  STP_Executor.cpp  STP_Output.cpp  Thread.cpp
branches/distributed-avalanche/samples/simple/: Makefile.am
branches/distributed-avalanche/valgrind/covgrind/: Makefile.am  cv_main.c
branches/distributed-avalanche/valgrind/include/: pub_tool_libcfile.h
branches/distributed-avalanche/valgrind/tracegrind/: Makefile.am  buffer.h  tg_main.c
branches/samsung/: configure.ac
branches/samsung/agent/: agent.cpp  plugin-agent.cpp
branches/samsung/debian/: changelog  control
branches/samsung/driver/include/: Chunk.h  ExecutionManager.h  Executor.h  FileBuffer.h  Input.h  LocalExecutor.h  OptionConfig.h  PluginExecutor.h  (+1 more)
branches/separate-analysis/: README
branches/separate-analysis/valgrind/: autogen.sh
branches/stable-1.0/: Makefile  configure
branches/stable-1.0/driver/: files.make
debian/: changelog
driver/: files.make
driver/include/: Chunk.h  Error.h  ExecutionManager.h  Executor.h  FileBuffer.h  Input.h  LocalExecutor.h  Logger.h  Makefile.am  Monitor.h  OptionConfig.h  OptionParser.h  PluginExecutor.h  RemotePluginExecutor.h  STP_Executor.h  SocketBuffer.h  Thread.h
driver/src/: Chunk.cpp  Entry.cpp  Error.cpp  ExecutionLogBuffer.cpp  ExecutionManager.cpp  Executor.cpp  FileBuffer.cpp  Input.cpp  LocalExecutor.cpp  Logger.cpp  Makefile.am  Monitor.cpp  OptionParser.cpp  PluginExecutor.cpp  ProgExecutor.cpp  RemotePluginExecutor.cpp  STP_Executor.cpp  STP_Output.cpp  SocketBuffer.cpp  Thread.cpp  TmpFile.cpp
samples/: crules.make  recurse.make
samples/simple/: Makefile  Makefile.am  entry.c  seed
stp-ver-0.1-11-18-2008/: Makefile.am  Makefile.in  configure  configure.ac
tags/avalanche-0.4/: autogen.sh
tags/avalanche-0.4/agent/: Makefile.am
tags/avalanche-0.4/stp-ver-0.1-11-18-2008/: autogen.sh
tags/avalanche-0.4/valgrind/: Makefile.am
trunk/: Makefile  README  autogen.sh  configure.ac
trunk/agent/: Makefile.am  agent.cpp  dist.cpp
trunk/driver/: Makefile
trunk/driver/include/: Executor.h  FileBuffer.h  LocalExecutor.h  Logger.h  Makefile.am  OptionConfig.h  RemotePluginExecutor.h  STP_Output.h  SocketBuffer.h
trunk/driver/src/: Entry.cpp  ExecutionManager.cpp  Executor.cpp  FileBuffer.cpp  Input.cpp  Logger.cpp  OptionParser.cpp  PluginExecutor.cpp  STP_Executor.cpp
trunk/samples/: Makefile
trunk/samples/simple/: Makefile.am  entry.c  separate_analysis_sample.c
trunk/stp-ver-0.1-11-18-2008/: configure.ac
trunk/stp-ver-0.1-11-18-2008/parser/: Makefile.am
trunk/valgrind/: Makefile.am  Makefile.vex.am  configure.in
trunk/valgrind/VEX/: Makefile
trunk/valgrind/coregrind/: m_libcfile.c
trunk/valgrind/covgrind/: cv_main.c
trunk/valgrind/include/: Makefile.am  avalanche.h
trunk/valgrind/memcheck/: mc_main.c  mc_translate.c
trunk/valgrind/tracegrind/: Makefile.am  stpbuffer.h  tg_main.c
valgrind/: Makefile.am  configure.in
valgrind/VEX/pub/: libvex_ir.h
valgrind/auxprogs/: Makefile.am
valgrind/coregrind/: Makefile.am  m_signals.c
valgrind/coregrind/m_syswrap/: syswrap-amd64-linux.c  syswrap-arm-linux.c  syswrap-generic.c  syswrap-x86-linux.c
valgrind/covgrind/: Makefile.am  cv_main.c
valgrind/docs/: Makefile.am
valgrind/include/: avalanche.h
valgrind/memcheck/: mc_main.c
valgrind/tracegrind/: Makefile.am  parser.c  parser.h  stack.c  stack.h  stpbuffer.c  tg_dhelpers_amd64.c  tg_dhelpers_x86.c  tg_main.c
wiki/: Avalanche.wiki  Distributed_avalanche.wiki  Input_masks_and_function_filtering.wiki  Installation.wiki  Mask_syntax.wiki  Multiple_threads_for_STP_queries.wiki  PageName.wiki  Papers.wiki  Samples.wiki  Separate_analysis_speed_up.wiki  Specifying_functions_for_separate_analysis.wiki  User_Guide.wiki  Using_Avalanche.wiki  Using_CLO_checking.wiki
(+72 files in other folders)
