bin_PROGRAMS = avalanche

INCLUDES = -I../include

avalanche_CFLAGS = -Wno-deprecated

avalanche_SOURCES = \
       Chunk.cpp \
       Entry.cpp \
       Executor.cpp \
       ExecutionManager.cpp \
       Logger.cpp \
       OptionParser.cpp \
       PluginExecutor.cpp \
       ProgExecutor.cpp \
       FileBuffer.cpp \
       SocketBuffer.cpp \
       Input.cpp \
       STP_Executor.cpp \
       STP_Output.cpp \
       TmpFile.cpp
