noinst_PROGRAMS = entry divclient multiple_client multiple_client2 writeserver sample2 uninit mleak

entry_SOURCES = entry.c
divclient_SOURCES = divclient.c
multiple_client_SOURCES = multiple_client.c
multiple_client2_SOURCES = multiple_client2.c
writeserver_SOURCES = writeserver.c
sample2_SOURCES = sample2.c
uninit_SOURCES = uninit.c
mleak_SOURCES = mleak.c
