bin_PROGRAMS = avalanche

INCLUDES = -I../include

CXXFLAGS += -pthread
avalanche_CFLAGS = -Wno-deprecated

avalanche_SOURCES = \
       Chunk.cpp \
       Entry.cpp \
       LocalExecutor.cpp \
       RemotePluginExecutor.cpp \
       ExecutionManager.cpp \
       Logger.cpp \
       OptionParser.cpp \
       PluginExecutor.cpp \
       FileBuffer.cpp \
       SocketBuffer.cpp \
       Input.cpp \
       STP_Executor.cpp \
       TmpFile.cpp \
       Thread.cpp \
       Monitor.cpp
